    &#8226; Saved Searches drawer item<br/>
    &#8226; Save and destroy saved searches<br/>
    &#8226; Added picture filter to searches<br/>
    &#8226; Added retweet filter to searches<br/>
    &#8226; RTL support for Android 4.2 and above<br/>
    &#8226; Themers can now theme the action bar<br/>
    &#8226; Some support for ow.ly images in-line<br/>
<br/>
<b>IMPROVED:</b><br/>
    &#8226; Super smooth optimizations<br/>
    &#8226; Remade the tweet viewer layout<br/>
    &#8226; Changed the conversation and discussion style<br/>
    &#8226; Opening notifications will now take you to the correct place<br/>
    &#8226; Auto-complete of users. Opening their profile will now make them searchable<br/>
    &#8226; Much more efficient and useful highlighting of users, hashtags, and links<br/>
    &#8226; Ability to open retweeters profile when viewing a retweet<br/>
    &#8226; Displaying links on timeline<br/>
    &#8226; Theme selection<br/>
<br/>
<b>FIXES:</b><br/>
    &#8226; A little bit better Vine support. Sound is an issue.<br/>
    &#8226; More Tweetmarker fixes<br/>
    &#8226; Pebble notifications will now work for everyone<br/>
    &#8226; Fixed the compose window not always shutting<br/>
</br><br/>

<b>Version 1.4.4:</b><br/><br/>
    &#8226; Pwiccer support (https://play.google.com/store/apps/details?id=com.t3hh4xx0r.pwiccer&hl=en)<br/>
    &#8226; Mention retweeter when replying<br/>
    &#8226; Fixes for live streaming sometimes setting up multiple listeners causing duplicates<br/>
    &#8226; Open play store links to the play store<br/>
    &#8226; Clicking a "Saved Image" notification will take you to that image in the gallery<br/>
    &#8226; Search users from a web link<br/>
    &#8226; Play store crash fixes<br/>
    &#8226; Simple style changes to extra page setup<br/>
    &#8226; Random small reported bug fixes<br/>
    &#8226; Updated more translations<br/>
</br><br/>

<b>Version 1.4.3:</b><br/><br/>