@@ -13,7 +13,7 @@
     &#8226; Some support for ow.ly images in-line<br/>
 <br/>
 <b>IMPROVED:</b><br/>
-    &#8226; Super smooth optimizations<br/>
+    &#8226; Super smooth scrolling optimizations<br/>
     &#8226; Remade the tweet viewer layout<br/>
     &#8226; Changed the conversation and discussion style<br/>
     &#8226; Opening notifications will now take you to the correct place<br/>
@@ -21,6 +21,7 @@
     &#8226; Much more efficient and useful highlighting of users, hashtags, and links<br/>
     &#8226; Ability to open retweeters profile when viewing a retweet<br/>
     &#8226; Displaying links on timeline<br/>
+    &#8226; Displaying and sharing Twitter picture links<br/>
     &#8226; Theme selection<br/>
 <br/>
 <b>FIXES:</b><br/>
